--- a/index.html
+++ b/index.html
@@ -7,7 +7,32 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <div id="title">
+        <h1>Tic Tac Toe</h1>
+    </div>
+    <div id="board">
+        <div class="row">
+            <div class="box" id="square-0"></div>
+            <div class="box" id="square-1"></div>
+            <div class="box" id="square-2"></div>
+        </div>
     
+        <div class="row">
+            <div class="box" id="square-3"></div>
+            <div class="box" id="square-4"></div>
+            <div class="box" id="square-5"></div>
+        </div>
+
+        <div class="row">
+            <div class="box" id="square-6"></div>
+            <div class="box" id="square-7"></div>
+            <div class="box" id="square-8"></div>
+        </div>   
+    </div>
+
+    <div id="btn">
+        <button id="restart" type="reset">Restart Game</button>
+    </div>
 
     <script src="index.js"></script>
 </body>
