add html show result

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="title">
         <h1>Tic Tac Toe</h1>
+        <h2 id="result"> </h2>
     </div>
     <div id="board">
         <div class="row">
